--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  trivyscan:
     permissions:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
@@ -24,7 +24,8 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          docker build -t docker.io/webgoat/goatandwolf:v8.2.2 .
+          cd docker/
+          docker build --no-cache --build-arg webgoat_version=8.2.0-SNAPSHOT -t webgoat/goatandwolf:latest .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
